@@ -959,15 +959,15 @@ An image 2 em wide:
 
 An image 2 em wide and 30 pixel high:
 
-\includegraphics[width=2em]{../../../docs/user/rst/images/biohazard.png}
+\includegraphics[width=2em,height=30pt]{../../../docs/user/rst/images/biohazard.png}
 
 An image occupying 70{\%} of the line width:
 
-\includegraphics[width=70%]{../../../docs/user/rst/images/biohazard.png}
+\includegraphics[width=0.700\linewidth]{../../../docs/user/rst/images/biohazard.png}
 
 An image 3 cm high:
 
-\includegraphics{../../../docs/user/rst/images/biohazard.png}
+\includegraphics[height=3cm]{../../../docs/user/rst/images/biohazard.png}
 
 
 %___________________________________________________________________________
